Implemented CreateOrder, cart-logic, modified readme and added swagger-notation
